--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - "db/schema.rb"
     - "Rakefile"
     - "bin/spring"
+    - "spec/rails_helper.rb"
   UseCache: false
 Style/CollectionMethods:
   Description: Preferred collection methods.
