--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,24 @@
+engines:
+  rubocop:
+    enabled: true
+  golint:
+    enabled: true
+  eslint:
+    enabled: false
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+ratings:
+  paths:
+  - app/**
+  - lib/**
+  - "**.rb"
 exclude_paths:
-- "coverage/"
-- "public/"
+- coverage/**/*
+- public/**/*
+-db/**/*
